Updated Bar Plot

--- a/homework/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/homework/Instructions/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "Zoniferol                        0.516398  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "Text(0.5, 1.0, 'Drug Regimen Data Points')"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -545,7 +545,7 @@
    ],
    "source": [
     "# Generate a bar plot showing number of data points for each treatment regimen using pandas\n",
-    "mouse_summary_data_dp.plot.bar(y='Data Points')\n",
+    "mouse_summary_data_dp.plot.bar(y='Data Points'))\n",
     "plt.ylabel('Data Points')\n",
     "plt.xlabel('Drug Regimen')\n",
     "plt.title('Drug Regimen Data Points')"
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
